02_security_group/sg_alb.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Create a security group for ALB access.

# =======================================
# Metadata
# =======================================
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Common Configuration"
        Parameters:
          - PJPrefix
          - Environment
          - VPCID

# =======================================
# Parameters
# =======================================
Parameters:
  PJPrefix:
    Type: String
    Default: testprefix
    MinLength: 1
    MaxLength: 12
    AllowedPattern: "[a-z0-9]+"
    Description: "Project prefix, consisting of lowercase letters and numbers."
    ConstraintDescription: "Must contain only lowercase letters and numbers."

  Environment:
    Type: String
    Default: dev
    AllowedValues: [ dev, stg, prd ]
    Description: "Deployment environment (dev, stg, or prd)."

  VPCID:
    Type: AWS::EC2::VPC::Id
    Default: ""
    Description: "VPC ID to associate with the Security Group"

# =======================================
# Resources
# =======================================
Resources:

  # -------------------------------------
  # Security Group
  # -------------------------------------
  SecurityGroupForALB:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "${PJPrefix}-${Environment}-alb-sg"
      VpcId: { "Fn::ImportValue": { "Fn::Sub": "${PJPrefix}-${Environment}-vpc" }}
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-${Environment}-alb-sg"
        - Key: PJName
          Value: !Ref PJPrefix

  # -------------------------------------
  # SecurityGroup for Web
  # -------------------------------------
  SecurityGroupForWeb:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "${PJPrefix}-${Environment}-albweb-sg"
      VpcId: { "Fn::ImportValue": { "Fn::Sub": "${PJPrefix}-${Environment}-vpc" }}
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-${Environment}-albweb-bsg"
        - Key: PJName
          Value: !Ref PJPrefix

  WebSecurityGroupIngress: 
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties: 
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      SourceSecurityGroupId: !GetAtt [ SecurityGroupForALB, GroupId ] 
      GroupId: !GetAtt [ SecurityGroupForWeb, GroupId ]

# =======================================
# Outputs
# =======================================
Outputs:
  SecurityGroupId:
    Value: !Ref SecurityGroupForALB
    Export:
      Name: !Sub "${PJPrefix}-${Environment}-alb-sg"
