02_security_group/sg_web.yml
AWSTemplateFormatVersion: 2010-09-09
Description: "Create a security group for web access."

# =======================================
# Metadata
# =======================================
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Common Configuration"
        Parameters:
          - PJPrefix
          - Environment
          - ServerKind

# =======================================
# Parameters
# =======================================
Parameters:
  PJPrefix:
    Type: String
    Default: testprefix
    MinLength: 1
    MaxLength: 12
    AllowedPattern: "[a-z0-9]+"
    Description: "Project prefix, consisting of lowercase letters and numbers."
    ConstraintDescription: "Must contain only lowercase letters and numbers."

  Environment:
    Type: String
    Default: dev
    AllowedValues: [ "dev", "stg", "prd" ]
    Description: "Deployment environment (dev, stg, or prd)."

  VPCID:
    Type: "AWS::EC2::VPC::Id"
    Default: ""
    Description: "VPC ID to associate with the Security Group"

# =======================================
# Resources
# =======================================
Resources:

  # -------------------------------------
  # Security Group
  # -------------------------------------
  SecurityGroupForEC2:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "${PJPrefix}-${Environment}-websg"
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "10.0.0.0/32"
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "10.0.0.0/32"
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "10.0.0.0/32"
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-${Environment}-websg"
        - Key: PJName
          Value: !Ref PJPrefix

# =======================================
# Outputs
# =======================================
Outputs:
  SecurityGroupId:
    Value: !Ref SecurityGroupForEC2
    Export:
      Name: !Sub "${PJPrefix}-${Environment}-websg"
